お気に入りの曲 ContentProviderで取得