@@ -12,7 +12,8 @@ import androidx.recyclerview.widget.RecyclerView;
 import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
-import java.util.List;
+import java.util.ArrayList;
+import java.util.Map;
 
 import io.realm.RealmResults;
 import tokyo.tkw.thinmp.R;
@@ -20,6 +21,8 @@ import tokyo.tkw.thinmp.adapter.FavoriteSongEditAdapter;
 import tokyo.tkw.thinmp.favorite.FavoriteSong;
 import tokyo.tkw.thinmp.favorite.FavoriteSongList;
 import tokyo.tkw.thinmp.favorite.FavoriteSongRegister;
+import tokyo.tkw.thinmp.music.Track;
+import tokyo.tkw.thinmp.provider.TracksContentProvider;
 
 public class FavoriteSongEditActivity extends AppCompatActivity {
 
@@ -31,9 +34,13 @@ public class FavoriteSongEditActivity extends AppCompatActivity {
         RecyclerView view = findViewById(R.id.favoriteList);
 
         RealmResults<FavoriteSong> realmResults = FavoriteSongList.getFavoriteList();
-        List<FavoriteSong> favoriteList = Stream.of(realmResults).toList();
-
-        FavoriteSongEditAdapter adapter = new FavoriteSongEditAdapter(favoriteList);
+        ArrayList<FavoriteSong> favoriteList = (ArrayList<FavoriteSong>) Stream.of(realmResults).toList();
+        ArrayList<String> trackIdList =
+                (ArrayList<String>) Stream.of(favoriteList).map(FavoriteSong::getTrackId).collect(Collectors.toList());
+        TracksContentProvider tracksContentProvider = new TracksContentProvider(this, trackIdList);
+        Map<String, Track> trackMap =
+                Stream.of(tracksContentProvider.getList()).collect(Collectors.toMap(track -> track.getId(), track -> track));
+        FavoriteSongEditAdapter adapter = new FavoriteSongEditAdapter(favoriteList, trackMap);
 
         ItemTouchHelper itemTouchHelper = new ItemTouchHelper(new ItemTouchHelper.SimpleCallback(
                 ItemTouchHelper.UP | ItemTouchHelper.DOWN,
@@ -67,7 +74,7 @@ public class FavoriteSongEditActivity extends AppCompatActivity {
         findViewById(R.id.apply).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                List<String> trackIdList = Stream.of(favoriteList).map(FavoriteSong::getTrackId).collect(Collectors.toList());
+                ArrayList<String> trackIdList = (ArrayList<String>) Stream.of(favoriteList).map(FavoriteSong::getTrackId).collect(Collectors.toList());
                 FavoriteSongRegister.update(trackIdList);
                 finish();
             }
